--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/network.png
+    - assets/images/imdb.png
+    - assets/images/imdb.png
+
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
