--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   http: ^0.13.3
   connectivity: ^3.0.6
+  device_preview: ^0.7.4
 
 
 
@@ -35,7 +36,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.8.0
+  flutter_launcher_icons: "^0.9.0"
 flutter_icons:
   android: true
   ios: true
